# agent-daemon

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  blemeesd-spec.md  ccsockd-spec.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bump-tap.yml  ci.yml  docs-sync.yml  release.yml
blemees/: README.md  __init__.py  __main__.py  bench.py  cli.py  client.py  config.py  daemon.py  errors.py  logging.py  protocol.py  session.py  subprocess.py
blemees/backends/: claude.py  codex.py  translate_claude.py  translate_codex.py
blemees/schemas/inbound/: options.claude.json  options.codex.json
blemees_agent/: __init__.py  __main__.py  bench.py  cli.py  client.py  config.py  daemon.py  errors.py  event_log.py  logging.py  protocol.py  session.py
blemees_agent/backends/: __init__.py  claude.py  codex.py  translate_claude.py  translate_codex.py
blemees_agent/schemas/: README.md  __init__.py  _common.json
blemees_agent/schemas/inbound/: agent.close.json  agent.hello.json  agent.interrupt.json  agent.list_sessions.json  agent.open.json  agent.ping.json  agent.session_info.json  agent.status.json  agent.unwatch.json  agent.user.json  agent.watch.json  blemeesd.close.json  blemeesd.hello.json  blemeesd.list_sessions.json  blemeesd.open.json  blemeesd.watch.json
blemees_agent/schemas/outbound/: agent.closed.json  agent.error.json  agent.event.json  agent.hello_ack.json  agent.interrupted.json  agent.opened.json  agent.pong.json  agent.replay_gap.json  agent.session_closed.json  agent.session_info_reply.json  agent.session_taken.json  agent.sessions.json  agent.status_reply.json  agent.stderr.json  agent.unwatched.json  agent.watching.json  blemeesd.error.json  blemeesd.hello_ack.json  blemeesd.opened.json  blemeesd.pong.json  blemeesd.replay_gap.json  blemeesd.session_closed.json  blemeesd.session_info_reply.json  blemeesd.sessions.json  blemeesd.status_reply.json  blemeesd.stderr.json
ccsock/: README.md  __init__.py  __main__.py  bench.py  client.py  config.py  daemon.py  errors.py  event_log.py  logging.py  protocol.py  session.py  subprocess.py
docs/: _config.yml  agent-events.md  asymmetries.md  codex-backend-plan.md  codex-followups.md  index.md  schemas.md  spec.md  test-followups.md
docs/traces/: transcript-claude.txt  transcript-codex.txt
packaging/blemees-agentd/: blemees-agentd.service  com.blemees.blemees-agentd.plist
packaging/blemeesd/: blemeesd.service  com.blemees.blemeesd.plist
packaging/ccsockd/: ccsockd.service  com.ccsock.ccsockd.plist
packaging/homebrew/: README.md  blemees.rb
schemas/: README.md  _common.json
schemas/inbound/: blemeesd.close.json  blemeesd.hello.json  blemeesd.interrupt.json  blemeesd.list_sessions.json  blemeesd.open.json  blemeesd.ping.json  blemeesd.session_info.json  blemeesd.status.json  blemeesd.unwatch.json  blemeesd.watch.json  claude.user.json
schemas/outbound/: blemeesd.closed.json  blemeesd.error.json  blemeesd.hello_ack.json  blemeesd.interrupted.json  blemeesd.opened.json  blemeesd.replay_gap.json  blemeesd.session_info_reply.json  blemeesd.session_taken.json  blemeesd.sessions.json  blemeesd.status_reply.json  blemeesd.stderr.json  blemeesd.unwatched.json  blemeesd.watching.json  claude.event.json
scripts/: release.sh  transcript_compare.py
tests/: conftest.py
tests/blemees/: conftest.py  fake_claude.py  fake_codex.py  test_backend_claude.py  test_backend_codex.py  test_daemon_e2e.py  test_daemon_e2e_claude.py  test_daemon_e2e_codex.py  test_daemon_mock.py  test_daemon_replay.py  test_daemon_shutdown.py  test_event_log.py  test_protocol.py  test_schemas.py  test_session.py  test_subprocess.py  test_translate_codex.py  test_version.py
tests/blemees_agent/: conftest.py  fake_claude.py  test_backend_claude.py  test_backend_codex.py  test_cli.py  test_daemon_e2e_claude.py  test_daemon_e2e_codex.py  test_daemon_mock.py  test_daemon_replay.py  test_daemon_shutdown.py  test_event_log.py  test_protocol.py  test_schemas.py  test_session.py  test_translate_codex.py  test_version.py
tests/ccsock/: conftest.py  fake_claude.py  test_daemon_e2e.py  test_daemon_mock.py  test_daemon_replay.py  test_event_log.py  test_protocol.py  test_session.py  test_subprocess.py
