[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccsock"
version = "0.1.0"
description = "Headless Claude Code daemon exposing `claude -p` over a Unix socket."
readme = "ccsock/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ccsock contributors" }]
keywords = ["claude", "claude-code", "daemon", "unix-socket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
ccsockd = "ccsock.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["ccsock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_claude: needs a real `claude` binary authenticated in the test environment",
]
